--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '2'
 
 services:
+    node:
+        build:
+            context: .
+        volumes:
+            - ./app:/var/www/app
+            - /var/www/app/node_modules
+
     nginx:
         image: nginx:1.21.6
         ports:
@@ -40,6 +47,14 @@ services:
             - "/var/run:/var/run:rw"
             - "/sys:/sys:ro"
             - "/var/lib/docker/:/var/lib/docker:ro"
+
+    bbox:
+        image: arqsoft/bbox:202201.1
+        ports:
+            - "9090:9090"
+            - "9091:9091"
+        volumes:
+            - ./bbox.conf:/opt/bbox/config.properties
 
 volumes:
     grafana_config:
