Nginx initial config

--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,9 +1,13 @@
+upstream node {
+        server tp1-node-1:3000;
+}
+
 server {
         # this server listens on port 80
         listen 80;        
         server_name nodeserver;
 
         location / {
-                proxy_pass http://localhost:3000/;
+                proxy_pass http://node/;
         }
 }
