--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,11 +1,11 @@
 upstream node {
-        server tp1-node-1:3000;
+        server 1c22-tp-1_node_1:3000;
 }
 
 server {
         # this server listens on port 80
-        listen 80;        
-        server_name nodeserver;
+        listen 80;  
+        listen [::]:80;      
 
         location / {
                 proxy_pass http://node/;
