--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     node:
         build:
             context: .
-        ports:
-            - "3000:3000"
+        # ports:
+        #     - "3000:3000"
         volumes:
             - ./app:/var/www/app
             - /var/www/app/node_modules
@@ -26,7 +26,7 @@ services:
             - ./statsd.config.js:/opt/statsd/config.js
             - ./graphite.storage-schemas.conf:/opt/graphite/conf/storage-schemas.conf
         ports:
-            - "8090:8078"
+            - "8090:80"
             - "8125:8125/udp"
             - "8126:8126"
 
