--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,15 @@ services:
             - ./app:/var/www/app
             - /var/www/app/node_modules
 
+    multi_node:
+        build:
+            context: .
+        ports:
+            - "3000"
+        volumes:
+            - ./app:/var/www/app
+            - /var/www/app/node_modules
+
     nginx:
         image: nginx:1.21.6
         depends_on:
