--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,5 +1,7 @@
 upstream node {
-        server node:3000;
+        server node:300;
+        server multi_node1:3000;
+        server multi_node2:3000;
 }
 
 server {
