multiple containers maybe

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,6 @@ services:
     multi_node:
         build:
             context: .
-        ports:
-            - "3000"
         volumes:
             - ./app:/var/www/app
             - /var/www/app/node_modules
@@ -21,6 +19,7 @@ services:
         image: nginx:1.21.6
         depends_on:
             - node
+            - multi_node
         ports:
             - "5555:80"
         volumes:
