--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
         image: nginx:1.21.6
         depends_on:
             - node
-            - multi_node
         ports:
             - "5555:80"
         volumes:
@@ -27,6 +26,20 @@ services:
             - ./store/static/files:/static:ro
         links:
             - node
+
+    nginx_multi:
+        image: nginx:1.21.6
+        depends_on:
+            - node
+            - multi_node
+        ports:
+            - "5556:80"
+        volumes:
+            - ./nginx_reverse_proxy_multi.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./store/static/files:/static:ro
+        links:
+            - node
+            - multi_node
 
     graphite:
         image: graphiteapp/graphite-statsd:1.1.8-8
