--- a/perf/scaling-heavy_load.yaml
+++ b/perf/scaling-heavy_load.yaml
@@ -28,10 +28,14 @@ config:
     - name: Ramp
       duration: 30
       arrivalRate: 30
-      rampTo: 100
+      rampTo: 50
     - name: Plain
-      duration: 60
-      arrivalRate: 100
+      duration: 20
+      arrivalRate: 50
+    - name: Ramp Down
+      duration: 30
+      arrivalRate: 50
+      rampTo: 1
     
 scenarios:
   - name: HeavyLoad (/heavyLoad)
