--- a/perf/scaling-heavy_load.yaml
+++ b/perf/scaling-heavy_load.yaml
@@ -20,22 +20,22 @@ config:
   phases:
     - name: Ramp
       duration: 30
+      arrivalRate: 3
+    - name: Ramp 2
+      duration: 30
+      arrivalRate: 4
+    - name: Ramp 3
+      duration: 30
       arrivalRate: 5
-      rampTo: 30
-    - name: Plain
+    - name: Ramp 4
       duration: 30
-      arrivalRate: 30
-    - name: Ramp
+      arrivalRate: 6
+    - name: Ramp 5
       duration: 30
-      arrivalRate: 30
-      rampTo: 50
-    - name: Plain
-      duration: 20
-      arrivalRate: 50
-    - name: Ramp Down
+      arrivalRate: 7
+    - name: Ramp 6
       duration: 30
-      arrivalRate: 50
-      rampTo: 1
+      arrivalRate: 8
     
 scenarios:
   - name: HeavyLoad (/heavyLoad)
